sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: not found: value getNombreValeur
	var b= getNombreValeur()
               ^